# ChangeLog for sys-apps/rng-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/rng-tools/ChangeLog,v 1.50 2014/08/10 20:25:06 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> rng-tools-2-r1.ebuild,
  rng-tools-3-r1.ebuild, rng-tools-3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*rng-tools-4-r7 (24 May 2014)

  24 May 2014; Pacho Ramos <pacho@gentoo.org> +files/rngd.service,
  +rng-tools-4-r7.ebuild:
  Add unit file (#510826 by Salah Coronya)

  16 Dec 2013; Sven Vermeulen <swift@gentoo.org> rng-tools-4-r5.ebuild,
  rng-tools-4-r6.ebuild:
  Adding dependency to selinux-rngd

  22 May 2013; Mike Frysinger <vapier@gentoo.org> files/rngd-initd-3,
  files/rngd-initd-4, files/rngd-initd-4.1:
  Change the after clause from "random" (which does not seem to have ever
  existed) to "urandom" (which has been around since very old baselayout-1 days)
  #470014 by Roman Žilka.

*rng-tools-4-r6 (15 May 2013)

  15 May 2013; Anthony G. Basile <blueness@gentoo.org>
  +files/fix-textrels-on-PIC-x86.patch, +rng-tools-4-r6.ebuild:
  Fix assemby textrels on rdrand_asm.S on PIC x86, bug #469962

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> rng-tools-4-r5.ebuild:
  Stable for x86, wrt bug #458826

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> rng-tools-4-r5.ebuild:
  Stable for ia64, wrt bug #458826

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> rng-tools-4-r5.ebuild:
  Stable for alpha, wrt bug #458826

  03 May 2013; Agostino Sarubbo <ago@gentoo.org> rng-tools-4-r5.ebuild:
  Stable for ppc, wrt bug #458826

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> rng-tools-4-r5.ebuild:
  Stable for amd64, wrt bug #458826

  24 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> files/rngd-initd-4.1:
  Fix typo. Thanks to Chris Mayo for reporting.

  17 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> files/rngd-confd-4.1,
  files/rngd-initd-4.1: