@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX rng-tools-5-fix-textrels-on-PIC-x86.patch 2685 SHA256 edb9cd2439dd184df6bc5fd5c0148ba839506015917ab6a39394dff6a45a210f SHA512 918e66755d533b7255a9bba715942514a0381cc12a046e537eaa54ad2e4106485aee30defa1b84ba6f7e42adf1f3403bb2f24448c1153edbfa25f342d669818e WHIRLPOOL b0ecd30124f08b73ce05ba06d1c40db7c7834d11b850aa7e1baf461b2c1437355590b4a55d0a78daf2a107388f4f2d243f789451e97721afe5b8043dfea1fb60
+AUX rng-tools-5-fix-textrels-on-PIC-x86.patch 2629 SHA256 9cbd7d16df3a945f8168ec38d6695f563c420957cb84171c50cd82ab89376786 SHA512 a7740fb7b112a04efd96aefdf3df972b02127acc96bc28f5a70f36118cc321ac84f8b62cb0bbfe6861de294eb91e0cabf03fbeae0ccc37cb4687135e00efcf78 WHIRLPOOL 8a90758373e112e71e57b5ee191ff9c37b5a7d2521e38340a7337a9b24c036e35bb149665be8c0309ff2a77a65460cab6b061c8778c32a42bac7f1cee5799295
 AUX rngd-confd-4.1 562 SHA256 cdbd39f7446f12a9b78e87e9f135cfd0f6f364c4fa4ade0c96084b85c32afc38 SHA512 45e0e9cbe0180162f659bf05c15ee99fb8c1b80274cd8744384ba7f791b1c9a46a63e81eea665b4f492c13b7d5cc1fdb6e524a49a25af77f3791f527b31f688b WHIRLPOOL 87634cea70a1c8ffa7598cc8b0d93c79578433cc21b58bb13bc9144502b9502e2c4f151bcf282ad4ccef44a931f1be5d1e87ff7b9b6d07cfa0a4c288b4172ec3
 AUX rngd-initd-4.1 897 SHA256 56780a5d0a3348a08ab19ba56e591f60f84665417ce9893d7b669fbc442bf1d4 SHA512 43d6612c6d6376a21b4522369688908e24544311632277a8dadc2a7c91ed664f7cf6610bab6592040fb10ca4adb98d2136134879bcfeeb25159c55cf9c0f6799 WHIRLPOOL c740a965b0e47dcae0d2ac01d01d3cf5e3f9ce4c5df626d75de82f3b5fe232391bafd43be099439cf6445f362ad7681d782db9497e6a13008d221fb8663579e5
 AUX rngd.service 133 SHA256 a05b1075157d39302106221594e1640479fae5dee4595de09442901a3a2d1648 SHA512 51e9ea84b624cda8d3689d6a9a8d60da4a556aa9d2a1a04e698d9a1490717aa47172e152c93711f8d04be8a5b68b1dfd568a762bd8ee7219afb7cdfff15657d2 WHIRLPOOL 093b0cd19a147abd9fc10f366c2c5a167d31b839d755cf2e56f6ae35409b6eb764db0651858d20dc95b71fe1d90b4ca33bde88053c80e40665613d132357366a
 AUX test-for-argp.patch 1318 SHA256 222ee3b8bfbe4827140a67af4b8d170aaa135d5317e3a40b236f8d79a06c4274 SHA512 9418bea246052391e9dab1583a7e44c47f87c34d39860c76bf11090fd397ea70ec76cb7e4c91afbe1f18a19c6f8767e0e6ceec02fbd7ef8204e8ab168f3077d8 WHIRLPOOL a54d1e8f4d3e1070cda067120318d775f0a768836984c831cc84929801d29e5f7c694e90e96926e52af57d509a52d4340c3cf9ee847782927d3dfa16fa3f758b
 DIST rng-tools-5.tar.gz 122182 SHA256 60a102b6603bbcce2da341470cad42eeaa9564a16b4490e7867026ca11a3078e SHA512 58047c37cad4f5f1210b696e4dba122878f78e57d05d9cb822f79234240ecce31efd2d39061fea1eb5b2e81d48d8c3bf6b92d06451f1ce5d5db7117704e89c50 WHIRLPOOL 073dbeb9d27189db44658a9f25657b93a320b125fbfc8230f7ce7849b8e7c1f7802b4c3a53de3417525b02739194fab8a6e5eb03d5db317a23deb275d72fbb21
 EBUILD rng-tools-5.ebuild 977 SHA256 16f48112dff835b41f6d46f1ecdb5e5147e586bcc2468f8d9def5ed3e3cccfbb SHA512 19ffb189e2477c754f2b34ff35cf3cae2b42157f02c8cf578e7733af893dae4cf10b1531a5120b9fb4d6fe15b98b9cb5fa46a4fbb1eb04fd39d7528afed46b6d WHIRLPOOL 44f33651484630267e37ee6006ba39aff7ed0104d31c045360f2dcef3490063b0776f7ebd8cb748f214ac6ca5346f398382d182b1cf62c34925b0e18928326d2
-MISC ChangeLog 8348 SHA256 e89bd74e3a661421f3cda3ac5c9e31cd062dfa7b43ce900e1b4eb4815c60618e SHA512 1cf789d3afc358627532387816be99489464bbf56994b4a2035c608f2394cccf6f01056ec25131862f5741cc5f5f6d58334d3edda7e0bd38e8b1ebed81254110 WHIRLPOOL 9e8237e4ea96d8c736ce7d09021ed371405d1a28638c61e02b63f235e04cdf596a1d5e59be73734a3c489726c9ff5079787c18f4b48628b29132ad583b26d07f
+MISC ChangeLog 8495 SHA256 3c3350a78756b92777626859cdf647012c2b9a82e3671b15bcd6f87abec7bb49 SHA512 96012a3f36a665e792564b7875b0fcaee4eca220989f6ad88b36a585b37b050e0c745b5a5b46261dd13304b16d97c17a8b05576a9915e674a968247031c073c9 WHIRLPOOL c14d178103b3f7b2bc3cee9e396762438903bc84087d39991cddaa6afe3f4ecb11ef95373c782a231942b0e37f86920730267c65bc41838a9467d70f54f2c493
 MISC metadata.xml 165 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a SHA512 3f1bee5d098a4e5874df3af56169397cc3ed526f9c56004b9ccaa4c5cf02d4affd894400b88f50f3c19bf5ba3ae06f3d4d2cfa5c15e97b7d4c33053e5f0f63c5 WHIRLPOOL 070ba3ff0b1ea000c90d8af13cdac14693dc5d9dcc8d8ba89cf9bdbe91196e3cf9e72bd2f01cd5efc1ddab63b83184159298d1ee891bc123107ea6891ad612d2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJURmwCAAoJEKXBodJLEo5SDIoIAMX2EKD+fr9YJ9g6GqUsFozM
-He51QlIdP9zMZsM77bj+6UAT86RUY2CIwySMwjN6Fm+EmASzEZJyTzTuMxRTIh9k
-BQRCraoe3mNdOOLfnm2c7otRk9GH5u1Aas1+XiexTs1hdWQC31cZnLELm2Q1BEVP
-GPexMtyxGw9WVWKwAxiHo47Aa7F7s8dEcSlNS/CRMPYfKFekM54pADIiBVqoT7KD
-hkZHYHnI022CxBESiAa7Qr6UaVQNIHGBXry6p1Pfwt4sKRICVKUkFodcYdsazmIo
-os6amcCS9bfQjKv+SBsMJlOg5q4aTTF8MMigZfO4guqvMO0GDJ9TWbtesRzpZd8=
-=4Wmo
+iQEcBAEBCAAGBQJURndhAAoJEKXBodJLEo5SRFkH/17MCvgNNVTxM3A391CW95Dg
+gHDed1Hn9MnLlFsHTmy+QUxVfuhLUCrhhMWc/lADvIAhQ0tAsHMAR8VdBnfLZr1L
+pZJNG3xvY4eRyA2GbJXi9UWsXuI205t2lwHBSclJU5iT72eWZzIVUnSMIcIoZQY5
+rYL0t4P8/G6zdvx0WweMYDN8jMOt0/2VI0HGcf/Bwh9KGJ1sV+u+Lzy5sTw0Ry98
+vOl9SADafeQrtQ5g9HxB1Dpndi4Qps84Vbl/ljs0ZgPkzCqBZp05eezsnX6PBE3s
+S7NWoURCTQaoPJSyfsUUTVl0a/KMbjs45epLZtCLlBs7/BgLd2LaVUzUqaNoYBE=
+=0jqZ
 -----END PGP SIGNATURE-----
