@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/rng-tools/ChangeLog,v 1.50 2014/08/10 20:25:06 slyfox Exp $
 
+  21 Oct 2014; Francisco Blas Izquierdo Riera (klondike)
+  files/rng-tools-5-fix-textrels-on-PIC-x86.patch:
+  Remove unnecessary undef from patch
+
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> rng-tools-2-r1.ebuild,
   rng-tools-3-r1.ebuild, rng-tools-3.ebuild:
   QA: drop trailing '.' from DESCRIPTION
